# zerohub

./: Cargo.toml
src/: main.rs
static/: index.html
templates/client/: README.md  package.json
templates/server/: README.md  pyproject.toml
