[package]
name = "zerohub"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "6.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
mime = "0.3"
actix-multipart = "0.7"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
zip = "2.2"
tempfile = "3.15"
env = "1.0.1"
rust-embed = "8.5.0"
mime_guess = "2.0"
