[package]
name = "zerohub"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "6.0"
uuid = { version = "1.0", features = ["v4"] }
mime = "0.3"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
zip = "2.2"
tempfile = "3.15"
env = "1.0.1"
rust-embed = "8.5.0"
mime_guess = "2.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
